<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_marginBottom="10dp">

    <RelativeLayout
        android:id="@+id/first_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp">


        <android.support.v7.widget.CardView
            android:id="@+id/avatarcard"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:cardCornerRadius="20dp"
            android:layout_marginStart="3dp">
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/avatar"
                android:scaleType="fitCenter"
                android:src="@drawable/uploaded2" />
        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/morew"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            app:srcCompat="@drawable/ic_more_vert_black_24dp"/>


        <LinearLayout
            android:id="@+id/first_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/avatarcard"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/time"
                android:textColor="@color/grey"
                android:textSize="13sp" />

        </LinearLayout>

        <!--<TextView-->
        <!--android:id="@+id/verified"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="2dp"-->
        <!--android:layout_marginLeft="2dp"-->
        <!--android:layout_marginTop="6dp"-->
        <!--android:layout_toEndOf="@+id/first_linear"-->
        <!--android:layout_toRightOf="@+id/first_linear"-->
        <!--android:fontFamily="sans-serif-condensed-light"-->
        <!--android:text="@string/verified"-->
        <!--android:textColor="@color/green"-->
        <!--android:textStyle="italic" />-->

    </RelativeLayout>

    <TextView
        android:id="@+id/posts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_relative"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/post"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/picture_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/posts"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/uploaded1"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/second_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture_post"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:id="@+id/scnd_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/ic_favorite_black_24dp" />

            <TextView
                android:id="@+id/reactons_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:text="100"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/remarks"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/remarks_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_toStartOf="@+id/remarks"
            android:layout_toLeftOf="@+id/remarks"
            android:text="@string/Remarks_count"
            android:textColor="@color/black"
            android:textSize="13sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgView_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/second_relative"
        android:background="@color/grey" />

    <LinearLayout
        android:id="@+id/third_linear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/imgView_line">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_favorite_white_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/react"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_comment_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/remark"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_share_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/share"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>